2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cachedresult.cxx:
  - Fixed cursor position bug when size was even multiple of granularity
 test/test41.cxx:
  - New
2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Implemented empty()
  - Added m_Lower
  - clear() no longer forgets size information, just flushes cache
 src/cachedresult.h:
  - Simplified binary search logic using m_Lower
  - Removed special case (-1 for unknown) from m_Upper
  - No longer rely on m_Cache to provide highest known-to-exist block
2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Use ALL and BACKWARD ALL instead of highest/lowest representable numbers
 test/test19.cxx, test/test38.cxx:
  - Replaced hardcoded table name by command-line argument as intended
2002-12-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Bumped revision to 1.2.0.
 include/pqxx/CachedResult.h, src/CachedResult.cxx:
  - New
 include/pqxx/compiler.h, include/pqxx/robusttransaction.h:
  - Removed constructs that looked like HTML tags but weren't.
 test/test40.cxx:
  - New
2002-11-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Workaround for missing InvalidOid definition
2002-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.h, src/result.cxx:
  - Added AffectedRows() function requested by Peter Novodvorsky
 test/test13.cxx:
  - Tests Result::InsertedOid() and Result::AffectedRows()
 test/test7.cxx:
  - Tests Result::AffectedRows()
2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.h:
  - Changed Tuple constructor arg from Tuple::size_type to Result::size_type
 include/pqxx/cursor.h, include/tablereader.h, include/tablestream.h,
 include/tablewriter.h, src/cursor.cxx, src/tablereader.cxx,
 src/tablestream.cxx, src/tablewriter.cxx:
  - Constructors now take TransactionItf & instead of Transaction &
2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh: