@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.53)
-AC_INIT(libpqxx, 1.2.2, [Jeroen T. Vermeulen <jtv@xs4all.nl>])
+AC_INIT(libpqxx, 1.2.3, [Jeroen T. Vermeulen <jtv@xs4all.nl>])
 AC_CONFIG_AUX_DIR(config)
-AM_INIT_AUTOMAKE(libpqxx, 1.2.2)
+AM_INIT_AUTOMAKE(libpqxx, 1.2.3)
 
 # Library version numbering - see "info libtool versioning 'libtool
 # versioning'" for details.
@@ -181,9 +181,18 @@ Please specify the location of the PostgreSQL include files with
 --with-postgres-include=... or --with-postgres=...]
 ))
 
-AC_CHECK_HEADER([sys/select.h],[AC_DEFINE(HAVE_SYS_SELECT_H,1,
-[Define if the sys/select.h header (defining the fd_set type and related macros)
-is available])])
+AC_LANG_PUSH(C++)
+AC_MSG_CHECKING([for working <sys/select.h>])
+select_h=yes
+AC_TRY_COMPILE(
+	[#include <sys/select.h>]
+	, [select(0,0,0,0,0)]
+	, AC_DEFINE(HAVE_SYS_SELECT_H,1,
+[Define if the sys/select.h header defines a working select() and friends, as per POSIX 1003.1-2001])
+	,select_h=no
+)
+AC_MSG_RESULT($select_h)
+AC_LANG_POP(C++)
 
 AC_MSG_CHECKING([InvalidOid])
 AH_TEMPLATE(InvalidOid,[Do we have InvalidOid definition?])
@@ -195,6 +204,18 @@ AC_TRY_COMPILE(
 	, [AC_DEFINE(InvalidOid,0)]
 )
 AC_MSG_RESULT($invalidoid)
+
+AC_MSG_CHECKING([PQescapeString()])
+AH_TEMPLATE(PQescapeString,[Do we have a PQescapeString function?])
+pqescapestring=yes
+AC_TRY_COMPILE(
+	[#include <${with_postgres_include}/libpq-fe.h>]
+	, [char C[9]; return PQescapeString(C,C,9)]
+	, AC_DEFINE(HAVE_PQESCAPESTRING,1,
+[Define if PostgreSQL version being compiled against has PQescapeString()])
+	,pqescapestring=no
+)
+AC_MSG_RESULT($pqescapestring)
 
 AC_LANG_PUSH(C++)
 AC_CHECK_HEADERS([limits iterator])
