@@ -1,4 +1,13 @@
 2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac:
+  - Test for presence of PQescapeString()
+ include/pqxx/util.h:
+  - Fixed Quote() for outlandish characters.  Thanks Bada.
+2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac, test/test23.cxx, test/test4.cxx:
+  - Not only test for <sys/select.h>, but also see if it works--thanks Rod 
+    Taylor for feedback, testing, and facilities.
+2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/cachedresult.cxx:
   - Fixed cursor position bug when size was even multiple of granularity
  test/test41.cxx:
